Add of link/unlink feature + location feature

--- a/WebContent/forms/searchItem.html
+++ b/WebContent/forms/searchItem.html
@@ -118,7 +118,7 @@ function onImportItemFormSearchClick(){
 			row.push("<a href='#' onClick='event.preventDefault();openItem({id:\""+element.id+"\", name : \""+element.name+"\"});$(\"#popup\").panel().close()'>"+element.name+"</a>");
 			row.push(element.class.name);
 			row.push(element.category.name);
-			var label = "<button class='btn btn-primary btn-sm' onClick='event.preventDefault();onImportItemFormAddClick(\""+element.id+"\");'>Add</button>";
+			var label = "<button class='btn btn-primary btn-sm' onClick='event.preventDefault();linkItem({id:\""+global.currentItem.id+"\"},{id:\""+element.id+"\"});'>Add</button>";
 			row.push(label);
 			data.push(row);
 		}
