--- a/WebContent/forms/viewItem.html
+++ b/WebContent/forms/viewItem.html
@@ -1,8 +1,7 @@
 <html>
 <body>
 	<form>
-		<span style="display: none" data-provider="currentItem"
-			onchange="viewItemUpdate(currentItem)" />
+		<span style="display: none" data-provider="currentItem" onchange="_viewItem.refreshItem(global.currentItem)"/>
 		<ul class="nav nav-pills mb-3" id="myTab" role="tablist">
 			<li class="nav-item"><a class="nav-link active" id="detail-tab" data-toggle="tab"
 				href="#detail" role="tab" aria-controls="detail" aria-selected="true">Detail</a></li>
@@ -19,9 +18,9 @@
 				<fieldset class="form-group">
 					<legend>Item fields</legend>
 					<div class="form-group row">
-						<label class="col-sm-2 col-form-label col-form-label-sm" for="viewItemId">Name</label>
+						<label class="col-sm-2 col-form-label col-form-label-sm" for="viewItemId">ID</label>
 						<div class="col-10">
-							<input class="form-control form-control-sm" type="text" id="viewItemId" />
+							<input class="form-control form-control-sm" type="text" id="viewItemId" readonly="true"/>
 						</div>
 					</div>
 					<div class="form-group row">
@@ -33,13 +32,13 @@
 					<div class="form-group row">
 						<label class="col-sm-2 col-form-label col-form-label-sm" for="viewItemCategory">Category</label>
 						<div class="col-10">
-							<input class="form-control form-control-sm" type="text" id="viewItemCategory" />
+							<input class="form-control form-control-sm" type="text" id="viewItemCategory" readonly="true"/>
 						</div>
 					</div>
 					<div class="form-group row">
 						<label class="col-sm-2 col-form-label col-form-label-sm" for="viewItemClass">Class</label>
 						<div class="col-10">
-							<input class="form-control form-control-sm" type="text" id="viewItemClass" />
+							<input class="form-control form-control-sm" type="text" id="viewItemClass" readonly="true"/>
 						</div>
 					</div>
 					<div class="table-responsive">
@@ -55,12 +54,12 @@
 					</div>
 				</fieldset>
 				<hr />
-				<button class="btn btn-primary btn-sm" type="button" onclick='updateItem();'
+				<button class="btn btn-primary btn-sm" type="button" onclick='_viewItem.updateItem();'
 					id="viewItemUpdateButton">
 					<img src='images/92.png' /> update
 				</button>
 				<button class="btn btn-danger btn-sm" type="button"
-					onclick='deleteItem(currentItem.id);' id="viewItemDeleteButton">
+					onclick='deleteItem(global.currentItem.id);' id="viewItemDeleteButton">
 					<img src='images/14.png' /> delete
 				</button>
 			</div>
@@ -74,11 +73,15 @@
 				</div>
 			</div>
 			<div class="tab-pane fade" id="relateds" role="tabpanel" aria-labelledby="relateds-tab">
+				Category filter : <span id="viewItemFilterCategories" style="margin:6px"></span><button class='btn btn-sm btn-primary' onclick="_viewItem.resetFilter();_viewItem.updateCategoryFilter();_viewItem.refreshRelateds(global.currentItem)">all</button>
+				<br/>
+				<br/>
 				<table class="table table-bordered table-hover table-sm">
 					<thead>
 						<tr>
 							<th>Category</th>
 							<th>Name</th>
+							<th>Action</th>
 						</tr>
 					</thead>
 					<tbody id="viewItemRelatedItemsUp"></tbody>
@@ -88,6 +91,7 @@
 						<tr>
 							<th>Category</th>
 							<th>Name</th>
+							<th>Action</th>
 						</tr>
 					</thead>
 					<tbody id="viewItemRelatedItemsDown"></tbody>
@@ -96,58 +100,106 @@
 		</div>
 	</form>
 	<script>
-	function updateItem(){
-		
-	}
-	function viewItemUpdate(currentItem){
-		if (currentItem == null){
-			$("#viewItemId").			val("");
-			$("#viewItemName").			val("");
-			$("#viewItemCategory").		val("");
-			$("#viewItemClass").		val("");
-			$("#viewItemDeleteButton").	prop("disabled",true);
-			$("#viewItemProperties").	html("");
-			$("#viewItemRelatedItemsUp").html("");
-			$("#viewItemRelatedItemsDown").html("");
-		} else {
-			$("#viewItemId").			val(currentItem.id);
-			$("#viewItemName").			val(currentItem.name);
-			$("#viewItemCategory").		val(currentItem.category.name);
-			$("#viewItemClass").		val(currentItem.class.name);
-			$("#viewItemDeleteButton").	prop("disabled",false);
-			var property;
-			var html = "";
-			for(var i = 0; i < currentItem.properties.length; i++){
-				property = currentItem.properties[i];
-				html += "<tr><td>"+property.key+"</td><td>"+property.value+"</td></tr>";
+	var _viewItem = {
+		_categoryFilter : null,
+		resetFilter : function(){
+			var categories = global.itemCategories;
+			for (var c = 0; c < categories.length; c++){
+				this._categoryFilter[categories[c].id] = true;
 			}
-			$("#viewItemProperties").html(html);
-			$.getJSON( "api/element.php?id="+currentItem.id+"&direction=up&related_items", function(result) {
-    			var html = "";
-    			var element;
-    			for (var e = 0; e < result.elements.length; e++){
-	    			element = result.elements[e];
-	    			html += "<tr><td>"+element.category.name+"</td><td><a href='#' onclick='openItem({id:\""+element.id+"\"})'>"+element.name+"</a></td></tr>";
-    			}
-    			$("#viewItemRelatedItemsUp").html(html);
-    		}).fail(function(jxqr,textStatus,error){
-				sendMessage("error","Unable to get related items : "+error);
-			});
-			$.getJSON( "api/element.php?id="+currentItem.id+"&direction=down&related_items", function(result) {
+		},
+		updateCategoryFilter : function(){
+			var categories = global.itemCategories;
+			if (this._categoryFilter == null){
+				this._categoryFilter = new Array();
+				this.resetFilter();
+			}
+			var html = "";
+			for (var c = 0; c < global.itemCategories.length; c++){
+				html += "<button class='btn btn-sm ";
+				if (this._categoryFilter[categories[c].id] == true){
+					html += "btn-success";
+				} else {
+					html += "btn-secondary";
+				}
+				html += "'onclick='_viewItem._categoryFilter[\""+categories[c].id+"\"]=!_viewItem._categoryFilter[\""+categories[c].id+"\"];_viewItem.updateCategoryFilter();_viewItem.refreshRelateds(global.currentItem);'>"+categories[c].name+"</button>&nbsp;";
+			}
+			$("#viewItemFilterCategories").html(html);
+		},
+		refreshItem : function(item){
+			if (item == null){
+				$("#viewItemId").			val("");
+				$("#viewItemName").			val("");
+				$("#viewItemCategory").		val("");
+				$("#viewItemClass").		val("");
+				$("#viewItemUpdateButton").	prop("disabled",true);
+				$("#viewItemDeleteButton").	prop("disabled",true);
+				$("#viewItemProperties").	html("");
+				$("#viewItemRelatedItemsUp").html("");
+				$("#viewItemRelatedItemsDown").html("");
+			} else {
+				$("#viewItemId").			val(item.id);
+				$("#viewItemName").			val(item.name);
+				$("#viewItemCategory").		val(item.category.name);
+				$("#viewItemClass").		val(item.class.name);
+				$("#viewItemUpdateButton").	prop("disabled",true);
+				$("#viewItemDeleteButton").	prop("disabled",false);
+				var property;
 				var html = "";
-				var element;
-    			for (var e = 0; e < result.elements.length; e++){
-	    			element = result.elements[e];
-	    			html += "<tr><td>"+element.category.name+"</td><td><a href='#' onclick='openItem({id:\""+element.id+"\"})'>"+element.name+"</a></td></tr>";
-    			}
-    			$("#viewItemRelatedItemsDown").html(html);
-    		}).fail(function(jxqr,textStatus,error){
-				sendMessage("error","Unable to get related items : "+error);
-			});
+				for(var i = 0; i < item.properties.length; i++){
+					property = item.properties[i];
+					html += "<tr><td>"+property.key+"</td><td>"+property.value+"</td></tr>";
+				}
+				$("#viewItemProperties").html(html);
+				this.refreshRelateds(item);
+			}
+		},
+		refreshRelateds : function(item){
+			if (item == null){
+				$("#viewItemRelatedItemsUp").html("");
+				$("#viewItemRelatedItemsDown").html("");
+			} else {
+				$.getJSON( "api/element.php?id="+item.id+"&direction=up&related_items", function(result) {
+					var html = "";
+					var element;
+					for (var e = 0; e < result.elements.length; e++){
+		    			element = result.elements[e];
+		    			if (_viewItem._categoryFilter[element.category.id] == true){
+		    				html += "<tr><td>"+element.category.name+"</td>";
+			    			html += "<td><a href='#' onclick='openItem({id:\""+element.id+"\"})'>"+element.name+"</a></td>";
+			    			html += "<td><button class='btn btn-danger btn-sm' onClick='unlinkItem({id : \""+element.id+"\"},{id : \""+item.id+"\"});' title='Unlink \""+element.name+"\" from \""+item.name+"\"'>Unlink</button></td>";
+			    			html += "</tr>";
+		    			}
+					}
+					$("#viewItemRelatedItemsUp").html(html);
+				}).fail(function(jxqr,textStatus,error){
+					sendMessage("error","Unable to get related items : "+error);
+				});
+				$.getJSON( "api/element.php?id="+item.id+"&direction=down&related_items", function(result) {
+					var html = "";
+					var element;
+					for (var e = 0; e < result.elements.length; e++){
+		    			element = result.elements[e];
+		    			if (_viewItem._categoryFilter[element.category.id] == true){
+			    			html += "<tr><td>"+element.category.name+"</td>";
+			    			html += "<td><a href='#' onclick='openItem({id:\""+element.id+"\"})'>"+element.name+"</a></td>";
+			    			html += "<td><button class='btn btn-danger btn-sm' onClick='unlinkItem({id : \""+item.id+"\"},{id : \""+element.id+"\"});' title='Unlink \""+element.name+"\" from \""+item.name+"\"'>Unlink</button></td>";
+			    			html += "</tr>";
+		    			}
+					}
+					$("#viewItemRelatedItemsDown").html(html);
+				}).fail(function(jxqr,textStatus,error){
+					sendMessage("error","Unable to get related items : "+error);
+				});
+			}
+		},
+		updateItem : function(){
+			sendMessage("warning","Not yet implemented");
 		}
-	}
+	};
 	$(function(){
-		viewItemUpdate(currentItem);
+		_viewItem.updateCategoryFilter();
+		_viewItem.refreshItem(global.currentItem);
 	});
 </script>
 </body>
